fix(style): tos/pn layout overlap

--- a/packages/fxa-content-server/app/styles/_media_queries.scss
+++ b/packages/fxa-content-server/app/styles/_media_queries.scss
@@ -276,7 +276,7 @@ only screen and (orientation:landscape) and (min-width:481px) and (max-height:48
   }
 }
 
-@media only screen and (max-height:568px) {
+@media only screen and (max-height:$settings-ui-height) {
   #legal-footer {
     margin: 10px 0 0 0;
     position: relative;
